src/app/(room)/[id]/view/page.module.scss
@use 'styles/tokens' as t;

.stageHeader {
  margin-bottom: 18px;

  > :first-child:first-child {
    background: t.$color-brand-green;
    color: white;
    border-radius: 8px;
    font-size: 25px;
    font-weight: 700;
    line-height: 1.15;
    padding: 11px 20px 13px;
    text-transform: none;
  }
}

.groupsStageHeader {
  margin-bottom: 18px;

  > :first-child:first-child {
    background: #00192c;
    color: white;
    border-radius: 8px;
    font-size: 20px;
    font-weight: 600;
    line-height: 1.15;
    min-height: 50px;
    padding: 0 20px;
    text-transform: none;
  }
}

.viewTitleHeader {
  margin-bottom: 9px !important;
}

.viewPageHeader {
  margin-bottom: 12px !important;
}

.viewAdminContainer {
  gap: 0 12px !important;
}

.viewTitleAvatar {
  margin-right: 8px;
}

.groupCard {
  border-radius: 8px;
  overflow: hidden;

  > :first-child:first-child {
    background: white;
    color: t.$color-brand-blue;
    font-size: 16px;
    font-weight: 700;
    line-height: 1;
    min-height: 28px;
    padding: 7px 12px 5px;
    text-transform: uppercase;
  }
}

